// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Tooltip - prop type is marked as defined 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-link"
>
  

  

  <div
    role="tooltip"
  />
</button>
`;

exports[`Component: Tooltip - renders 1`] = `
<button
  className="tooltip btn btn-link"
>
  

  test title
  <i
    className="material-icons-outlined"
  >
    edit
  </i>
  

  <div
    role="tooltip"
  >
    test text
  </div>
</button>
`;

exports[`Component: Tooltip - renders div with class tooltip 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-link"
>
  

  

  <div
    role="tooltip"
  >
    test text
  </div>
</button>
`;

exports[`Component: Tooltip - renders with icon if icon is provided 1`] = `
<button
  className="tooltip btn btn-link"
>
  

  <i
    className="material-icons-outlined"
  >
    edit
  </i>
  

  <div
    role="tooltip"
  >
    test text
  </div>
</button>
`;

exports[`Component: Tooltip - renders with title text if provided 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-link"
>
  

  test title
  

  <div
    role="tooltip"
  >
    test text
  </div>
</button>
`;

exports[`Component: Tooltip - renders with tooltip position bottom 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-link tooltip-bottom"
>
  

  

  <div
    role="tooltip"
  >
    test text
  </div>
</button>
`;

exports[`Component: Tooltip - renders with tooltip position left 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-link tooltip-left"
>
  

  

  <div
    role="tooltip"
  >
    test text
  </div>
</button>
`;

exports[`Component: Tooltip - renders with tooltip position right 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-link tooltip-right"
>
  

  

  <div
    role="tooltip"
  >
    test text
  </div>
</button>
`;

exports[`Component: Tooltip - renders with tooltip position top 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-link tooltip-top"
>
  

  

  <div
    role="tooltip"
  >
    test text
  </div>
</button>
`;
